# cloudai

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  .taplo.toml  404.html  CONTRIBUTING.md  DEV_GUIDE.md  README.md  USER_GUIDE.md  greptile.json  hostfile.txt  index.html  install_config.toml  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
.github/: CODEOWNERS
.github/workflows/: ci.yml  docs.yml  functional_test.yml  gh-pages.yml
assets/css/: styles.5e67c308.css
assets/js/: 104.62f11302.js  130.43479b64.js  144.2920872e.js  15253ba1.dabe5be9.js  163.81408c04.js  171.621f3ccf.js  17896441.562218f0.js  1df93b7f.fddcfe14.js  237.56cdc56f.js  292.21a6ed56.js  2cb93357.57d891e2.js  315.21dcbbe1.js  329.36b0d6fe.js  3302cd4d.bf7f281a.js  417.7f3a63ae.js  495.692f44fb.js  495.8c3f0ee7.js  529.2d93a702.js  564.2d7103a1.js  5e95c892.011fb851.js  604.31151f9c.js  625.0ff5e976.js  628.f3baf275.js  64f9c463.350c4198.js  687.bcfde0f9.js  689.948e5a9a.js  73.0c190a62.js  770.32bd58a5.js  846.417af8a3.js  857.5ad66798.js  860.8bd33e18.js  899.dee0f06c.js  8e871774.f638803a.js  987.8fdc35b9.js  989.d11d84b7.js  a9a2e533.17d0c8d7.js  common.796290db.js  e111f111.2794d20e.js  main.450435a3.js  runtime~main.701d57d1.js
ci_tools/: check_copyright_headers.py
ci_tools/functional_tests/: README.md  run_functional_test.sh  system_config.toml
cloudai/grader/: __init__.py
cloudai/installer/: __init__.py  installer.py  slurm_installer.py
cloudai/runner/: __init__.py
cloudai/system_object_updater/: __init__.py
cloudai/util/: __init__.py
conf/hook/: healthy_nodes.toml  nccl_test.toml
conf/osu/: funk.toml  osu_test.toml
conf/plugin/: nccl_test_epilogue.toml
conf/system/: example_slurm_cluster.toml  kubernetes_cluster.toml  standalone_system.toml
conf/test/: chakra_replay.toml  gpt.toml  gpt_175B.toml  l40s-bc-nccl_test_all_gather.toml  l40s-bc-nccl_test_bisection.toml  l40s-bc-nccl_test_hypercube.toml  l40s-bc-nccl_test_reduce_scatter.toml  l40s-bc-nccl_test_sendrecv_worst.toml  llama.toml  llama3_70b.toml  nccl_test_all_gather.toml  nccl_test_all_reduce.toml  nccl_test_alltoall.toml  nccl_test_bisection.toml  nccl_test_broadcast.toml  nccl_test_gather.toml  nccl_test_hypercube.toml  nccl_test_reduce.toml  nccl_test_reduce_scatter.toml  nccl_test_scatter.toml  nccl_test_sendrecv.toml  sleep_1.toml  sleep_10.toml  sleep_20.toml  sleep_5.toml  ucc_test_allgather.toml  ucc_test_allreduce.toml  ucc_test_alltoall.toml  ucc_test_reduce_scatter.toml
conf/test_scenario/: chakra_replay.toml  l40s_bc_nccl_test.toml  nccl_test.toml  nemo_launcher.toml  nemo_launcher_with_noise.toml  sleep.toml  ucc_test.toml
conf/test_template/: chakra_replay.toml  nccl_test.toml  nemo_launcher.toml  sleep.toml  ucc_test.toml
doc/: DEV.md  DEV.rst  Makefile  Tutorial.rst  USER_GUIDE.md  USER_GUIDE.rst  ai_dynamo.md  conf.py  index.md  index.rst  reporting.md  reporting.rst  systems.rst  troubleshooting.rst  workloads_requirements_installation.rst
doc/workloads/: ai_dynamo.rst  aiconfigurator.rst  bash_cmd.rst  chakra_replay.rst  ddlb.rst  deepep.rst  deepep_benchmark.rst  dynamo_mocker.rst  fio.rst  index.md  index.rst  jax_toolbox.rst  megatron_bridge.rst  nccl.rst  nemo_launcher.rst  nemo_run.rst  nixl_bench.rst  nixl_ep.rst  nixl_kvbench.rst  nixl_perftest.rst  osu.md  osu.rst  sglang.rst  sleep.rst  slurm_container.rst  ucc.rst  vllm.rst  workloads_requirements_installation.rst
docs/: api.html  api.md  cli.html  cli.md  dev.html  quick-start.html  quick-start.md
docs/dev/: concepts.html  dev.md  overview.html  overview.md
experiment/ray_test/: ray_test_job.py  stderr.txt  stdout.txt  test.sh
schemas/: test_scenario.schema.json
src/cloudai/: __init__.py  __main__.py  core.py  exceptions.py  models.py  new_cli.py  parser.py  registration.py  registry.py  reporter.py  runner.py  test_parser.py  test_scenario_parser.py  toml_utils.py
src/cloudai_ui/: README.md  __init__.py  app.py  cli.py  comparison_dashboard.py  comparisson_dashboard.py  data_layer.py  dse_dashboard.py  nccl_dashboard.py  nixl_dashboard.py
src/cloudai_ui2/: __init__.py  app.py  cli.py  data_layer.py  nccl_dashboard.py
tests/: conftest.py  test_acceptance.py  test_action_space.py  test_agents.py  test_ai_dynamo.py  test_aiconfigurator_predictor.py  test_base_installer.py  test_base_runner.py  test_cache_docker_images_locally_false.py  test_calc_percentile_csv.py  test_cases_iter.py  test_check_copyright_headers.py  test_cli.py  test_cloudaigym.py  test_command_gen_strategy.py  test_compression_utility.py  test_csv_report_tool.py  test_docker_image_cache_manager.py  test_dse_parser.py  test_dse_parsing.py  test_env_params.py  test_example_env.py  test_file_output_system.py  test_get_job_id.py  test_git_repo_installer.py  test_gymnasium_adapter.py  test_gymnasium_adapter_contract.py  test_handlers.py  test_hf_model_manager.py  test_init.py  test_installables.py  test_job_status_retrieval_strategy.py  test_job_submission_error.py  test_job_type_handler.py  test_kubernetes_command_gen_strategy.py  test_kubernetes_installer.py  test_kubernetes_system.py  test_lsf_system.py  test_new_cli.py  test_osu_bench.py  (+24 more)
tests/dse/: test_dse_grok_parser.py  test_dse_parser_generic.py  test_dse_parser_grok.py
tests/isolation/: test_isolation.py
tests/job_status_retrieval_strategy/: test_jax_toolbox_job_status_retrieval_strategy.py  test_nccl_job_status_retrieval_strategy.py  test_nemo_run_job_status_retrieval_strategy.py  test_nixlbench_job_status_retrieval_strategy.py  test_vllm_job_status_retrieval_strategy.py
tests/json_gen_strategy/: test_ai_dynamo.py  test_common_kubernetes.py  test_nccl_kubernetes_json_gen_strategy.py  test_nccl_runai_json_gen_strategy.py  test_sleep_kubernetes_json_gen_strategy.py
tests/kubernetes_job_gen_strategy/: test_ai_dynamo_kubernetes_job_gen_strategy.py  test_nccl_kubernetes_job_gen_strategy.py  test_sleep_kubernetes_job_gen_strategy.py
tests/ref_data/: ai-dynamo-aiperf.sh  ai-dynamo.sbatch  fio.sbatch  (+45 more)
website/: docusaurus.config.ts  package-lock.json  sidebars.ts
(+1124 files in other folders)
